<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie Ticket Booking</string>
    <string name="select_popcorn_type">Chọn loại bắp</string>
    <string name="regular_popcorn">Bắp thường</string>
    <string name="cheese_popcorn">Bắp phô mai</string>
    <string name="caramel_popcorn">Bắp caramel</string>
    <string name="order">Đặt hàng</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="description_popcorn_image">Hình ảnh bắp rang bơ</string>
    <string name="select_drink_type">Chọn loại nước uống</string>
    <string name="coca_cola">Coca Cola</string>
    <string name="fanta_orange">Fanta Cam</string>
    <string name="sprite">Sprite</string>
    <string name="minus_original_popcorn">Giảm bắp thường</string>
    <string name="plus_original_popcorn">Tăng bắp thường</string>
    <string name="minus_cheese_popcorn">Giảm bắp phô mai</string>
    <string name="plus_cheese_popcorn">Tăng bắp phô mai</string>
    <string name="minus_caramel_popcorn">Giảm bắp caramel</string>
    <string name="plus_caramel_popcorn">Tăng bắp caramel</string>
    <string name="minus_coca_cola">Giảm Coca Cola</string>
    <string name="plus_coca_cola">Tăng Coca Cola</string>
    <string name="minus_fanta">Giảm Fanta</string>
    <string name="plus_fanta">Tăng Fanta</string>
    <string name="minus_sprite">Giảm Sprite</string>
    <string name="plus_sprite">Tăng Sprite</string>
    <string name="regular_popcorn_image">Hình ảnh bắp thường</string>
    <string name="cheese_popcorn_image">Hình ảnh bắp phô mai</string>
    <string name="caramel_popcorn_image">Hình ảnh bắp caramel</string>
    <string name="coca_cola_image">Hình ảnh Coca Cola</string>
    <string name="fanta_orange_image">Hình ảnh Fanta Cam</string>
    <string name="sprite_image">Hình ảnh Sprite</string>
    <string name="zero">0</string>
    <string name="contact_info_title">Thông tin liên hệ</string>
    <string name="change_password_title">Đổi mật khẩu</string>
    <string name="old_password_hint">Mật khẩu cũ</string>
    <string name="new_password_hint">Mật khẩu mới</string>
    <string name="confirm_new_password_hint">Xác nhận mật khẩu mới</string>
    <string name="change_password_button">Đổi mật khẩu</string>
    <string name="back_button_desc">Quay lại</string>
    <string name="special_offers_title">Ưu đãi ngập tràn</string>
    <string name="offer_image_desc">Hình ảnh ưu đãi</string>
    <string name="ticket_info_format">Phim: %1$s\nGhế: %2$s\nTổng số tiền: %3$d</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="error_format">Lỗi: %1$s</string>
</resources>
