<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cinema"
    tools:context=".Activities.PopcornDrinksActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/txtPopcorn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_popcorn_type"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color_high_contrast"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imgRegularPopcorn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/popcorn_original"
                    android:contentDescription="@string/regular_popcorn_image"
                    android:background="@color/background_color_dark"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/txtOriginalCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/regular_popcorn"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnMinusOriginal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus"
                    android:contentDescription="@string/minus_original_popcorn"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>

                <TextView
                    android:id="@+id/txtOriginalCountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnPlusOriginal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:contentDescription="@string/plus_original_popcorn"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imgCheesePopcorn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/popcorn_cheese"
                    android:contentDescription="@string/cheese_popcorn_image"
                    android:background="@color/background_color_dark"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/txtCheeseCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cheese_popcorn"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnMinusCheese"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus"
                    android:contentDescription="@string/minus_cheese_popcorn"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>

                <TextView
                    android:id="@+id/txtCheeseCountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnPlusCheese"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:contentDescription="@string/plus_cheese_popcorn"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imgCaramelPopcorn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/popcorn_caramel"
                    android:contentDescription="@string/caramel_popcorn_image"
                    android:background="@color/background_color_dark"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/txtCaramelCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/caramel_popcorn"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnMinusCaramel"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus"
                    android:contentDescription="@string/minus_caramel_popcorn"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>

                <TextView
                    android:id="@+id/txtCaramelCountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnPlusCaramel"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:contentDescription="@string/plus_caramel_popcorn"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtDrinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_drink_type"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color_high_contrast"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imgCocaCola"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/coca_cola"
                    android:contentDescription="@string/coca_cola_image"
                    android:background="@color/background_color_dark"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/txtCocaColaCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/coca_cola"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnMinusCocaCola"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus"
                    android:contentDescription="@string/minus_coca_cola"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>

                <TextView
                    android:id="@+id/txtCocaColaCountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnPlusCocaCola"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:contentDescription="@string/plus_coca_cola"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imgFanta"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/fanta_orange"
                    android:contentDescription="@string/fanta_orange_image"
                    android:background="@color/background_color_dark"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/txtFantaCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fanta_orange"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnMinusFanta"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus"
                    android:contentDescription="@string/minus_fanta"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>

                <TextView
                    android:id="@+id/txtFantaCountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnPlusFanta"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:contentDescription="@string/plus_fanta"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imgSprite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/sprite"
                    android:contentDescription="@string/sprite_image"
                    android:background="@color/background_color_dark"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/txtSpriteCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sprite"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnMinusSprite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus"
                    android:contentDescription="@string/minus_sprite"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>

                <TextView
                    android:id="@+id/txtSpriteCountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_high_contrast"/>

                <Button
                    android:id="@+id/btnPlusSprite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:contentDescription="@string/plus_sprite"
                    android:backgroundTint="@color/background_color_dark"
                    android:textColor="@color/text_color_high_contrast"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
