<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#32025C">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/back_btn"
        android:contentDescription="@string/back_button_desc"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/change_password_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#444"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/oldPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/old_password_hint"
                android:inputType="textPassword"

                android:textColorHint="#BBBBBB"
                android:backgroundTint="#666666"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textColorHint="#BBBBBB"
                android:backgroundTint="#666666" />

            <EditText
                android:id="@+id/confirmNewPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password_hint"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textColorHint="#BBBBBB"
                android:backgroundTint="#666666" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_password_button"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:padding="12dp" />
</LinearLayout>
